[gd_scene load_steps=21 format=3 uid="uid://chet0dxnbb2qs"]

[ext_resource type="Script" uid="uid://c7vjdyaj3o0p0" path="res://Player_Board.gd" id="1_n5ooj"]
[ext_resource type="Shader" uid="uid://c8msk6sgy2a1t" path="res://Deck_Highlight.gdshader" id="2_2k4wd"]
[ext_resource type="PackedScene" uid="uid://brxaidy7oal4n" path="res://ProgressBar.tscn" id="2_n5ooj"]
[ext_resource type="Texture2D" uid="uid://b503hsrjxwcub" path="res://new_Locked_sprite.png" id="3_q3pcv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_n5ooj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7cgx7"]
shader = ExtResource("2_2k4wd")

[sub_resource type="CanvasTexture" id="CanvasTexture_7cgx7"]

[sub_resource type="CanvasTexture" id="CanvasTexture_twdor"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n5ooj"]
texture = SubResource("CanvasTexture_twdor")
modulate_color = Color(1, 1, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_yrq8g"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2k4wd"]
texture = SubResource("CanvasTexture_yrq8g")
modulate_color = Color(0.784314, 0.784314, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_msxg8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bid15"]
texture = SubResource("CanvasTexture_msxg8")
modulate_color = Color(1, 1, 0.588235, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_bid15"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yrq8g"]
texture = SubResource("CanvasTexture_bid15")
modulate_color = Color(1, 1, 0.588235, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_rosgs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_msxg8"]
texture = SubResource("CanvasTexture_rosgs")
modulate_color = Color(0.588235, 0.588235, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_q3pcv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rosgs"]
texture = SubResource("CanvasTexture_q3pcv")
modulate_color = Color(1, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_2k4wd"]

[node name="Player_Board" type="Node2D"]
script = ExtResource("1_n5ooj")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.588235, 0.431373, 0.294118, 1)
position = Vector2(530, 628)
scale = Vector2(300, 40)
texture = SubResource("CanvasTexture_n5ooj")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.470588, 0.345098, 0.235294, 1)
position = Vector2(530, 588)
scale = Vector2(300, 40)
texture = SubResource("CanvasTexture_n5ooj")

[node name="Deck_Counter" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(40, 60)
offset_left = 251.0
offset_top = 578.0
offset_right = 291.0
offset_bottom = 638.0
text = "104"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Deck_Highlight" type="Sprite2D" parent="Deck_Counter"]
visible = false
material = SubResource("ShaderMaterial_7cgx7")
position = Vector2(20, 30)
scale = Vector2(40, 60)
texture = SubResource("CanvasTexture_7cgx7")

[node name="StartTurn_Draw" type="Button" parent="Deck_Counter"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 60)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
disabled = true

[node name="Spread_Button" type="Button" parent="."]
offset_left = 547.0
offset_top = 480.0
offset_right = 610.0
offset_bottom = 511.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.196078, 0.196078, 0.196078, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_n5ooj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2k4wd")
theme_override_styles/hover = SubResource("StyleBoxTexture_bid15")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_yrq8g")
theme_override_styles/disabled = SubResource("StyleBoxTexture_msxg8")
text = "Spread"

[node name="Discard_Button" type="Button" parent="."]
offset_left = 441.0
offset_top = 480.0
offset_right = 508.0
offset_bottom = 511.0
theme_override_styles/normal = SubResource("StyleBoxTexture_rosgs")

[node name="RichTextLabel" type="RichTextLabel" parent="Discard_Button"]
layout_mode = 0
offset_right = 67.0
offset_bottom = 31.0
mouse_filter = 1
theme_override_constants/paragraph_separation = -4
bbcode_enabled = true
text = "[font_size=12] End Turn [/font_size] [font_size=8](0/1)[/font_size]"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="ProgressBar" parent="." instance=ExtResource("2_n5ooj")]
position = Vector2(530, 540)

[node name="Drain_Counter" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(346, 608)
scale = Vector2(40, 60)
texture = SubResource("CanvasTexture_2k4wd")

[node name="Locked" type="Sprite2D" parent="Drain_Counter"]
scale = Vector2(0.025, 0.016)
texture = ExtResource("3_q3pcv")

[node name="Control" type="Control" parent="Drain_Counter"]
custom_minimum_size = Vector2(40, 62.5)
layout_mode = 3
anchors_preset = 0
offset_left = -0.5
offset_top = -0.5
offset_right = 39.5
offset_bottom = 62.0
scale = Vector2(0.025, 0.016)

[node name="RichTextLabel" type="RichTextLabel" parent="Drain_Counter/Control"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = 30.5
bbcode_enabled = true
text = "[font_size=12]Drain[/font_size] [font_size=8](0/5)[/font_size]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Deck_Counter/StartTurn_Draw" to="." method="_on_start_turn_draw_pressed"]
[connection signal="pressed" from="Spread_Button" to="." method="_on_spread"]
[connection signal="pressed" from="Discard_Button" to="." method="_on_Discard_Button_pressed"]
